@@ -1,0 +1,80 @@
+adjtime
+alarm
+argv
+asprintf
+atexit
+bsearch
+byteswap
+calloc
+confstr
+cycles
+empty
+fadvise
+ffs
+flush
+fnmatch
+fputc
+ftw
+fwrite
+getaddrinfo
+getdelim
+getenv
+getgrnam
+gethostbyaddr
+gethostbyname
+gethostbyname_r
+getmntent
+getopt
+getpass
+getpwnam
+getservbyname
+getservbyport
+getusershell
+glob
+grent
+hasmntopt
+hello
+iconv
+if_nameindex
+ltostr
+malloc-debugger
+md5_testharness
+memccpy
+memchr
+memcmp
+memrchr
+memusage
+mktime
+mmap_test
+pipe
+printf
+printftest
+protoent
+prototypes
+putenv
+pwent
+rand48
+read1
+readdir
+regex
+select
+sendfile
+servent
+siglist
+speed
+spent
+sprintf
+sscanf
+stdarg
+strcasecmp
+strcmp
+strncat
+strncpy
+strptime
+strrchr
+strstr
+strtol
+sysenter
+ungetc
+utime
+waitpid
