@@ -1,0 +1,13 @@
+test-canon
+testdiv
+testrand
+testsort
+tst-calloc
+tst-environ
+tst-limits
+tst-malloc
+tst-rand48
+tst-strtod
+tst-strtol
+tst-strtoll
+tst-system
